Changed Photo File path

--- a/Entertainment.html
+++ b/Entertainment.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\OneDrive\D479 Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -34,7 +34,7 @@
 
             <div>
                 <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-                <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\search.png" style="float: right;">
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
             </div>
 
         </header>
@@ -52,7 +52,7 @@
 
                     <!-- Left -->
                     <div style="width: 33%; height: 50%; float: left; text-align: center;">
-                        <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\fish.jpg" style="width: 80%; height: 95%">
+                        <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\fish.jpg" style="width: 80%; height: 95%">
                     </div>
 
                     <!-- Middle -->
@@ -70,7 +70,7 @@
 
                     <!-- Right -->
                     <div style="width: 33%; height: 50%; float: left; text-align: center;">
-                        <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\golf.jpg" style="width: 80%; height: 95%">
+                        <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\golf.jpg" style="width: 80%; height: 95%">
                     </div>
             </div>
 
