--- a/HomePage.html
+++ b/HomePage.html
@@ -27,7 +27,7 @@
 
             <div>
               <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-              <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\search.png" style="float: right;">
+              <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
             </div>
 
         </header>
@@ -37,7 +37,7 @@
         <main class="main">
           
             <div class="Left">
-              <img src='C:\Users\kacey.cundick\OneDrive\D479 Website\img\palmTree.png'  style='width:10%; height: 10%; max-width: 100%;'/>
+              <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width:10%; height: 10%; max-width: 100%;'/>
               <h1 class="title">Welcome to the Island of Taniti</h1>
               <h2 class="p">*** Taniti, a hidden gem in the Pacific, offers a perfect blend of natural beauty and vibrant culture, much like Hawaii’s Oahu. 
                            Visitors can bask in the island’s pristine beaches, where crystal-clear waters meet soft, white sands, ideal for sunbathing, swimming, and snorkeling. 
@@ -55,7 +55,7 @@
             </div>
 
             <div class="Right">
-              <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\beach.png" style="width: 100%; height: 50%; float: right">
+              <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\beach.png" style="width: 100%; height: 50%; float: right">
             </div>
 
         </main>
