--- a/Nature.html
+++ b/Nature.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\OneDrive\D479 Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -34,7 +34,7 @@
 
             <div>
                 <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-                <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\search.png" style="float: right;">
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
             </div>
 
         </header>
@@ -53,7 +53,7 @@
                     <h2>*** Taniti’s beaches are renowned for their breathtaking beauty, 
                         featuring powdery white sands, crystal-clear waters, and lush tropical surroundings. 
                     </h2>
-                    <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\natureBeach.jpg" style="width: 60%; height: 75%">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\natureBeach.jpg" style="width: 60%; height: 75%">
                 </div>
 
                 <!-- Rainforests Box-->
@@ -63,7 +63,7 @@
                         filled with dense vegetation, towering trees, 
                         and a variety of unique plant species. 
                     </h2>
-                    <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\natureRain.JPG" style="width: 75%; height: 75%">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\natureRain.JPG" style="width: 75%; height: 75%">
                 </div>
             </div>
         </main>
