Changed file path & Information
Changed file path and Added information in the Main part of the webpage.

--- a/Recommendations.html
+++ b/Recommendations.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\OneDrive\D479 Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -35,14 +35,39 @@
 
             <div>
                 <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-                <img src="C:\Users\kacey.cundick\OneDrive\D479 Website\img\search.png" style="float: right;">
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
             </div>
 
         </header>
         <!--  --------------------------------------------------------------------------------------->
         <main class="main">
-            <div class="Left">
-                <h1 class="title">Events on the Island of Taniti</h1>
+            
+            <!--Container-->
+            <div style="width: 100%;">
+                <!--Left-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1>Car Rentals</h1>
+                    <h2>We Recommend Renting A Car From Taniti Car Car Rentals</h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\car.jpg" style="width: 60%; height: 75%">
+
+                <!--Middle-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1>Dining</h1>
+                    <h2>We Recommend A Couple Of Restaurants<br>
+                        - Taniti Eats<br>
+                        - Island Eatery</h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\food.jpg" style="width: 60%; height: 75%">
+
+                <!--Right-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1>Hotels</h1>
+                    <h2>We Recommend Either Finding A Bed And Breakfast On The Island
+                        Or Booking A Room At Our 4-Star Resort On The Beach Valled Taniti Shores Resort. 
+                    </h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\hotel.jpg" style="width: 60%; height: 75%">
 
             </div>
 
