Added Recommedations Link

--- a/Destination.html
+++ b/Destination.html
@@ -30,6 +30,8 @@
                 <a href="FAQ.html"><button type="button" onclick="FAQ.html" class="button">FAQ</button></a>
                 <p class="inline">  |  </p>
                 <a href="AboutMe.html"><button type="button" onclick="AboutMe.html" class="button">About Taniti</button></a>
+                <p class="inline">  |  </p>
+                <a href="Recommendations.html"><button type="button" onclick="Recommendations.html" class="button">Recommendations</button></a>
             </div>
 
             <div>
