--- a/Experiences.html
+++ b/Experiences.html
@@ -32,7 +32,7 @@
                 <p class="inline">  |  </p>
                 <a href="AboutMe.html"><button type="button" onclick="AboutMe.html" class="button">About Taniti</button></a>
                 <p class="inline">  |  </p>
-                <a href="Recommendations.html"><button type="button" onclick="Recommendations.html" class="button">Recommendations</button></a>
+                <a href="Recommendations.html"><button type="button" onclick="Recommendations.html" class="button" style="width: 110px;">Recommendations</button></a>
             </div>
 
             <div>
