--- a/HomePage.html
+++ b/HomePage.html
@@ -24,7 +24,7 @@
                 <p class="inline">  |  </p>
                 <a href="AboutMe.html"><button type="button" onclick="AboutMe.html" class="button">About Taniti</button></a>
                 <p class="inline">  |  </p>
-                <a href="Recommendations.html"><button type="button" onclick="Recommendations.html" class="button">Recommendations</button></a>
+                <a href="Recommendations.html"><button type="button" onclick="Recommendations.html" class="button" style="width: 110px;">Recommendations</button></a>
             </div>
 
             <div>
@@ -39,7 +39,7 @@
         <main class="main">
           
             <div class="Left">
-              <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width:10%; height: 10%; max-width: 100%;'/>
+              
               <h1 class="title">Welcome to the Island of Taniti</h1>
               <h2 class="p">*** Taniti, a hidden gem in the Pacific, offers a perfect blend of natural beauty and vibrant culture, much like Hawaii’s Oahu. 
                            Visitors can bask in the island’s pristine beaches, where crystal-clear waters meet soft, white sands, ideal for sunbathing, swimming, and snorkeling. 
@@ -58,6 +58,9 @@
 
             <div class="Right">
               <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\beach.png" style="width: 100%; height: 50%; float: right">
+            </div>
+            <div>
+              <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width:10%; height: 25%; max-width: 100%;'/>
             </div>
 
         </main>
