Finished the FAQ and AboutMe pages.

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -43,9 +43,34 @@
         </header>
         <!--  --------------------------------------------------------------------------------------->
         <main class="main">
-            <div class="Left">
-                <h1 class="title">Events on the Island of Taniti</h1>
+            <div>
+                <h1 class="title">About the Island of Taniti</h1>
 
+                <p class="faqp">
+                    ***Taniti is a small, tropical island in the Pacific. While the island has an area of less than 500 square miles, 
+                    the terrain is varied and includes both sandy and rocky beaches, a small but safe harbor, lush tropical rainforests, 
+                    and a mountainous interior that includes a small, active volcano. Taniti has an indigenous population of about 20,000. 
+                    Until a recent increase in tourism, most the Tanitian economy was dominated by fishing or agriculture.
+                </p>
+            </div>
+
+            <!--Container-->
+            <div style="width: 100%;">
+
+                <!--Left-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\bird.jpg" style="width: 90%; height: 75%;">
+                </div>
+
+                <!--Middle-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\lizard.jpg" style="width: 90%; height: 75%;">
+                </div>
+
+                <!--Right-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\landscape.jpg" style="width: 90%; height: 75%;">
+                </div>
             </div>
 
         </main>
