--- a/FAQ.html
+++ b/FAQ.html
@@ -42,9 +42,34 @@
         </header>
         <!--  --------------------------------------------------------------------------------------->
         <main class="main">
-            <div class="Left">
+            <div>
                 <h1 class="title">Frequently Asked Questions</h1>
 
+                <p class="faqp">
+                    <strong>Are there family-friendly accommodations and activities? - </strong>Yes, the island has many family-friendly resorts and hotels, 
+                    as well as activities suitable for all ages, such as beach outings, nature walks, and interactive cultural experiences.
+                </p>
+
+                <!---->
+
+                <p class="faqp">
+                    <strong>What is the best time of year to visit? - </strong>The island enjoys a tropical climate year-round, 
+                    but the best time to visit is during the dry season, from November to April, when the weather is sunny and pleasant.
+                </p>
+
+                <!---->
+
+                <p class="faqp">
+                    <strong>What should I pack for my trip? - </strong>Pack light, breathable clothing, swimwear, sunscreen, a hat, 
+                    and comfortable walking shoes. Don’t forget your camera to capture the beautiful scenery and memorable moments!
+                </p>
+
+                <!---->
+
+                <p class="faqp">
+                    <strong>Do I need a visa to visit the island? - </strong>Visa requirements vary depending on your country of origin. 
+                    It’s best to check with the local embassy or consulate for the most up-to-date information.
+                </p>
             </div>
 
         </main>
