Finished Destination and Events pages

--- a/Destination.html
+++ b/Destination.html
@@ -42,8 +42,38 @@
         </header>
         <!--  --------------------------------------------------------------------------------------->
         <main class="main">
-            <div class="Left">
-                <h1 class="title">Destinations on the Island of Taniti</h1>
+            <!--Container-->
+            <div style="width: 100%;">
+                <!--Left-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1 class="title">Coral Gardens</h1>
+                    <h2 class="faqp">
+                        *** A sparkaling coral reef that is a underwater paradise for divers and snorkelers, 
+                        where a variety of marine life live and thrive.
+                    </h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\coral.jpg" style="width: 60%; height: 75%">
+
+                <!--Middle-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1 class="title">Volcano Vista</h1>
+                    <h2 class="faqp">
+                        *** A scenic viewpoint located on the slopes of the island’s active volcano. 
+                        Visitors can hike up to this spot to enjoy breathtaking views of the island 
+                        and the surrounding ocean.
+                    </h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\volcano.jpg" style="width: 60%; height: 75%">
+
+                <!--Right-->
+                <div style="width: 33%; height: 75%; float: left; text-align: center;">
+                    <h1 class="title">Tropical Waterfall</h1>
+                    <h2 class="faqp">
+                        *** A hidden gem within the rainforest, this picturesque waterfall is a perfect
+                        spot for a refreshing swim and picnic.
+                    </h2>
+                </div>
+                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\waterfall.jpg" style="width: 60%; height: 75%">
 
             </div>
 
