--- a/Events.html
+++ b/Events.html
@@ -43,10 +43,42 @@
         </header>
         <!--  --------------------------------------------------------------------------------------->
         <main class="main">
-            <div class="Left">
-                <h1 class="title">Events on the Island of Taniti</h1>
+            <div>
+                <h1 class="title">Upcoming Events on the Island of Taniti</h1>
+
+                <p class="faqp"><strong>Taniti Volcano Festival: </strong>An annual celebration held at the base of the island’s active volcano. 
+                    The festival includes traditional dances, music, and a spectacular fireworks display that lights up the night sky.
+                </p>
+
+                <p class="faqp"><strong>Taniti Seafood Feast: </strong>A culinary event showcasing the island’s freshest seafood. 
+                    Local chefs prepare a variety of dishes, and visitors can enjoy tastings, cooking demonstrations, and live music.
+                </p>
+
+                <p class="faqp"><strong>Cultural Hetitage Week: </strong>A week-long celeration of Tanitian Culture, featuring traditional crafts, 
+                    storytelling, dance performances, and workshops where visitors can learn about the island's history and customs. 
+                </p>
 
             </div>
+
+            <!--Container-->
+            <div style="width: 100%;">
+
+                <!--Left-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\seafood.jpg" style="width: 90%; height: 75%;">
+                </div>
+
+                <!--Middle-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\volcano.jpg" style="width: 90%; height: 75%;">
+                </div>
+
+                <!--Right-->
+                <div style="width: 33%; height: 50%; float: left;">
+                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\history2.jpg" style="width: 90%; height: 75%;">
+                </div>
+            </div>
+
 
         </main>
         <!--  --------------------------------------------------------------------------------------->          
