Finished the attractions page

--- a/Attractions.html
+++ b/Attractions.html
@@ -44,10 +44,39 @@
       </header>
           <!--  MAIN ---------------------------------------------------------------------------------------->
             <main class="main">
-                <div class="Left">
+                <div>
                     <h1 class="title">Attractions on the Island of Taniti</h1>
+                    <p class="faqp"><strong>Taniti Botanical Gardens: </strong>A beautifully landscaped garden showcasing the diverse flora of Taniti, 
+                      including rare tropical plants and a butterfly conservatory.
+                    </p>
 
+                    <p class="faqp"><strong>Turtle Sanctuary and Rehab Center: </strong>A sanctuary dedicated to the conservation and rehabilitation of sea turtles, 
+                      where visitors can learn about these majestic creatures and even participate in releasing rehabilitated turtles back into the ocean.
+                    </p>
+
+                    <p class="faqp"><strong>Sunset Beach Cinema: </strong>An open-air cinema on the beach where visitors can watch movies under the stars 
+                      while enjoying the sound of the waves.
+                    </p>
                 </div>
+
+                 <!--Container-->
+            <div style="width: 100%;">
+
+              <!--Left-->
+              <div style="width: 33%; height: 50%; float: left;">
+                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\flower.jpg" style="width: 90%; height: 75%;">
+              </div>
+
+              <!--Middle-->
+              <div style="width: 33%; height: 50%; float: left;">
+                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\cinemaBeach.jpg" style="width: 90%; height: 75%;">
+              </div>
+
+              <!--Right-->
+              <div style="width: 33%; height: 50%; float: left;">
+                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\turtle.jpg" style="width: 90%; height: 75%;">
+              </div>
+          </div>
 
             </main>
           <!--  FOOTER--------------------------------------------------------------------------------------->          
