Fixed Search Box

--- a/Destination.html
+++ b/Destination.html
@@ -35,8 +35,10 @@
             </div>
 
             <div>
-                <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
+                <form style="display: flex; float: right;">
+                    <input type="" name="query" placeholder="Search" style="float: right; font-family: Garamond, serif;">
+                    <button type="submit" class="buttonSearch">Submit</button>
+                  </form>
             </div>
 
         </header>
