--- a/PlanTrip.html
+++ b/PlanTrip.html
@@ -24,20 +24,6 @@
               width: 20px;
               height: 20px;
             }
-            
-            .buttonPlan {
-              padding: 10px 20px;
-              font-size: 16px;
-              border: none;
-              background-color: #007BFF;
-              color: white;
-              border-radius: 4px;
-              cursor: pointer;
-            }
-            
-            .buttonPlan:hover {
-              background-color: #0056b3;
-            }
             #total {
               font-size: 18px;
               font-weight: bold;
@@ -77,8 +63,10 @@
             </div>
 
             <div>
-                <input type="text" placeholder="Search" style="float: right; margin: 12px;">
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\search.png" style="float: right;">
+                <form style="display: flex; float: right;">
+                    <input type="" name="query" placeholder="Search" style="float: right; font-family: Garamond, serif;">
+                    <button type="submit" class="buttonSearch">Submit</button>
+                  </form>
             </div>
 
         </header>
