Recommendations address and phone added.

--- a/Recommendations.html
+++ b/Recommendations.html
@@ -51,16 +51,31 @@
                 <!--Left-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
                     <h1>Car Rentals</h1>
-                    <h2>We Recommend Renting A Car From Taniti Car Car Rentals</h2>
+                    <h2>We Recommend Renting A Car From Taniti Car Rentals
+                    <p style="text-indent: 10px;">
+                        <h1>- Taniti Car Rentals<br></h1>
+                        * Phone (765)098-8888 <br>
+                        * Address - 3654 Airport Road
+                    </p>
+                    </h2>
                 </div>
                 <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\car.jpg" style="width: 60%; height: 75%">
 
                 <!--Middle-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
                     <h1>Dining</h1>
-                    <h2>We Recommend A Couple Of Restaurants<br>
-                        - Taniti Eats<br>
-                        - Island Eatery</h2>
+                    <h2>We Recommend A Couple Of Restaurants<br><br>
+                        <h1>- Taniti Eats<br></h1>
+                        <p style="text-indent: 10px;">
+                            * Phone (765)321-9876 <br>
+                            * Address - 123 1st Street
+                        </p>
+                        <h1>- Island Eatery</h1>
+                        <p style="text-indent: 10px;">
+                            * Phone (765)123-4567 <br>
+                            * Address - 369 Main Street
+                        </p>
+                    </h2>
                 </div>
                 <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\food.jpg" style="width: 60%; height: 75%">
 
@@ -68,7 +83,18 @@
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
                     <h1>Hotels</h1>
                     <h2>We Recommend Either Finding A Bed And Breakfast On The Island
-                        Or Booking A Room At Our 4-Star Resort On The Beach Valled Taniti Shores Resort. 
+                        Or Booking A Room At Our 4-Star Resort On The Beach Valled Taniti Shores Resort.
+                        <p style="text-indent: 10px;">
+                            <h1>- Taniti Shores Resort</h1><br>
+                            * Phone (765)987-1235 <br>
+                            * Address - 1414 Beach Drive
+                        </p>
+                        <p style="text-indent: 10px;">
+                            <h1>- Taniti Bed and Breakfasts</h1><br>
+                            * Phone (765)345-8708 <br>
+                            * Address - 2678 Main Street
+                        </p>
+                         
                     </h2>
                 </div>
                 <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\hotel.jpg" style="width: 60%; height: 75%">
