Made all Img relative path.

--- a/Destination.html
+++ b/Destination.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -54,7 +54,7 @@
                         where a variety of marine life live and thrive.
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\coral.jpg" style="width: 60%; height: 75%">
+                <img src="img\coral.jpg" style="width: 60%; height: 75%">
 
                 <!--Middle-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
@@ -65,7 +65,7 @@
                         and the surrounding ocean.
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\volcano.jpg" style="width: 60%; height: 75%">
+                <img src="img\volcano.jpg" style="width: 60%; height: 75%">
 
                 <!--Right-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
@@ -75,7 +75,7 @@
                         spot for a refreshing swim and picnic.
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\waterfall.jpg" style="width: 60%; height: 75%">
+                <img src="img\waterfall.jpg" style="width: 60%; height: 75%">
 
             </div>
 
