--- a/Nature.html
+++ b/Nature.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -57,7 +57,7 @@
                     <h2>*** Taniti’s beaches are renowned for their breathtaking beauty, 
                         featuring powdery white sands, crystal-clear waters, and lush tropical surroundings. 
                     </h2>
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\natureBeach.jpg" style="width: 60%; height: 75%">
+                    <img src="img\natureBeach.jpg" style="width: 60%; height: 75%">
                 </div>
 
                 <!-- Rainforests Box-->
@@ -67,7 +67,7 @@
                         filled with dense vegetation, towering trees, 
                         and a variety of unique plant species. 
                     </h2>
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\natureRain.JPG" style="width: 75%; height: 75%">
+                    <img src="img\natureRain.JPG" style="width: 75%; height: 75%">
                 </div>
             </div>
         </main>
