--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -61,17 +61,17 @@
 
                 <!--Left-->
                 <div style="width: 33%; height: 50%; float: left;">
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\bird.jpg" style="width: 90%; height: 75%;">
+                    <img src="img\bird.jpg" style="width: 90%; height: 75%;">
                 </div>
 
                 <!--Middle-->
                 <div style="width: 33%; height: 50%; float: left;">
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\lizard.jpg" style="width: 90%; height: 75%;">
+                    <img src="img\lizard.jpg" style="width: 90%; height: 75%;">
                 </div>
 
                 <!--Right-->
                 <div style="width: 33%; height: 50%; float: left;">
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\landscape.jpg" style="width: 90%; height: 75%;">
+                    <img src="img\landscape.jpg" style="width: 90%; height: 75%;">
                 </div>
             </div>
 
