--- a/Attractions.html
+++ b/Attractions.html
@@ -15,7 +15,7 @@
               <!-- Homepage Img Link -->
               <a href="HomePage.html" style="float: Left;">
                 <button>
-                  <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                  <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                 </button>
               </a>
               <p class="inline">  |  </p>
@@ -66,17 +66,17 @@
 
               <!--Left-->
               <div style="width: 33%; height: 50%; float: left;">
-                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\flower.jpg" style="width: 90%; height: 75%;">
+                  <img src="img\flower.jpg" style="width: 90%; height: 75%;">
               </div>
 
               <!--Middle-->
               <div style="width: 33%; height: 50%; float: left;">
-                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\cinemaBeach.jpg" style="width: 90%; height: 75%;">
+                  <img src="img\cinemaBeach.jpg" style="width: 90%; height: 75%;">
               </div>
 
               <!--Right-->
               <div style="width: 33%; height: 50%; float: left;">
-                  <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\turtle.jpg" style="width: 90%; height: 75%;">
+                  <img src="img\turtle.jpg" style="width: 90%; height: 75%;">
               </div>
           </div>
 
