--- a/CulturalHistory.html
+++ b/CulturalHistory.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
             <a href="HomePage.html" style="float: Left;">
                 <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                 </button>
             </a>
                 
@@ -55,17 +55,17 @@
             <div style="width: 100%;">
                 <!--Left-->
                 <div style="width: 33%; height: 50%; float: left; text-align: center;">
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\history1.jpg" style="width: 85%; height: 75%">
+                    <img src="img\history1.jpg" style="width: 85%; height: 75%">
                 </div>
 
                 <!--Middle-->
                 <div style="width: 33%; height: 50%; float: left; text-align: center;">
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\history3.jpg" style="width: 85%; height: 75%">
+                    <img src="img\history3.jpg" style="width: 85%; height: 75%">
                 </div>
 
                 <!--Right-->
                 <div style="width: 33%; height: 50%; float: left; text-align: center;"> 
-                    <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\history2.jpg" style="width: 85%; height: 75%">
+                    <img src="img\history2.jpg" style="width: 85%; height: 75%">
                 </div>
             </div>
 
