--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
