--- a/HomePage.html
+++ b/HomePage.html
@@ -29,10 +29,20 @@
 
             <div>
               <form style="display: flex; float: right;">
-                <input type="" name="query" placeholder="Search" style="float: right; font-family: Garamond, serif;">
-                <button type="submit" class="buttonSearch">Submit</button>
+                <input type="text" id="search-input" name="query" placeholder="Search" style="float: right; font-family: Garamond, serif;">
+                <button type="submit" class="buttonSearch">Search</button>
               </form>  
             </div>
+
+            <script>
+              const searchInput = document.getElementByID('search-input');
+              const searchButton = document.getElementById('buttonSearch');
+
+              searchButton.addEventListener('click', () => {
+                const searchTerm = searchInput.value;
+                console.log('Search Term: ', searchTerm);
+              });
+            </script>
 
         </header>
 
@@ -56,7 +66,7 @@
               </h2>
             </div>
             <div>
-              <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\beach.png" style="width: 100%; height: 100%;">
+              <img src="img\beach.png" style="width: 100%; height: 100%;">
             </div>
         </main>
 
