--- a/Recommendations.html
+++ b/Recommendations.html
@@ -13,7 +13,7 @@
                 <!-- Homepage Img Link -->
                 <a href="HomePage.html" style="float: Left;">
                   <button>
-                    <img src='C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
+                    <img src='img\palmTree.png'  style='width: 100%; height: 85%; max-width: 100%;'/>
                   </button>
                 </a>
                 <p class="inline">  |  </p>
@@ -59,7 +59,7 @@
                     </p>
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\car.jpg" style="width: 60%; height: 75%">
+                <img src="img\car.jpg" style="width: 60%; height: 75%">
 
                 <!--Middle-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
@@ -77,7 +77,7 @@
                         </p>
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\food.jpg" style="width: 60%; height: 75%">
+                <img src="img\food.jpg" style="width: 60%; height: 75%">
 
                 <!--Right-->
                 <div style="width: 33%; height: 75%; float: left; text-align: center;">
@@ -97,7 +97,7 @@
                          
                     </h2>
                 </div>
-                <img src="C:\Users\kacey.cundick\Documents\GitHub\D479Website\img\hotel.jpg" style="width: 60%; height: 75%">
+                <img src="img\hotel.jpg" style="width: 60%; height: 75%">
 
             </div>
 
