Fixed style sheet Error
fixed Style to style

--- a/Attractions.html
+++ b/Attractions.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>D479 Web Page Attractions</title>
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Biome&display=swap" rel="stylesheet">
     </head>
     <body class="body">
