--- a/Destination.html
+++ b/Destination.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>D479 Web Page Destination</title>
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body class="body">
         <header class="header">
