--- a/PlanTrip.html
+++ b/PlanTrip.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>D479 Web Page Plan Your Trip</title>
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
         
         <style>
             form {
